--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=systemrentmecr.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=1078668134192
 VITE_FIREBASE_APP_ID=1:1078668134192:web:c27e6b5d044c8e6f9ceaf5
 URL_API_PLACES=https://api-geo-cr.vercel.app
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyAgpNMFI9S7bDvRaNYP-tK1w9DChvtRbFs
